@@ -10,6 +10,7 @@ x_IRC = irc://irc.perl.org/#lwp
 x_MailingList = mailto:libwww@perl.org
 
 [Prereqs]
+Clone = 0
 Compress::Raw::Zlib = 0
 Encode = 3.01
 Encode::Locale = 1
